test/library/packages/OrderedMap/init/testInitGenericError.good
$CHPL_HOME/modules/packages/OrderedMap.chpl:167: In initializer:
$CHPL_HOME/modules/packages/OrderedMap.chpl:170: warning: creating a orderedMap with key type C
$CHPL_HOME/modules/packages/OrderedMap.chpl:170: warning: which now means class type with generic management
$CHPL_HOME/modules/packages/OrderedMap.chpl:170: error: orderedMap key type cannot currently be generic
testInitGenericError.chpl:9: Initializer instantiated as: init(type keyType = C, type valType = int(64), param parSafe = 0, comparator: DefaultComparator, param implType: mapImpl = mapImpl.treap)
