test/library/packages/OrderedMap/init/testInitGenericError.chpl
use OrderedMap;



class C {
  var x = 10;
}

var l = new orderedMap(C, int);  // C has generic management
writeln(l);
